# dcwiz-app-template

./: CHANGELOG.md  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{ cookiecutter.__project_folder }}/: Dockerfile  alembic.ini  docker-compose.prod.yaml  docker-compose.yaml  pyproject.toml
{{ cookiecutter.__project_folder }}/.github/: dependabot.yml
{{ cookiecutter.__project_folder }}/.github/workflows/: bandit.yml  build-release.yml  build.yml  clean-untagged-packages.yml  deploy.yml  docker-scout.yml  lint.yml  safety.yml  version-check.yml
{{ cookiecutter.__project_folder }}/alembic/: env.py
{{ cookiecutter.__project_folder }}/ansible/: clean.yaml  down.yaml  hosts.yaml  populate.yaml  up.yaml
{{ cookiecutter.__project_folder }}/config/: authz.yaml  config.prod.toml  config.toml
{{ cookiecutter.__project_folder }}/export/: authz.yaml.example  env.dev  {{ cookiecutter.__container_name }}.yaml
{{ cookiecutter.__project_folder }}/scripts/: drop_postgres_database.sh
{{ cookiecutter.__project_folder }}/{{ cookiecutter.__project_slug }}/: app.py
{{ cookiecutter.__project_folder }}/{{ cookiecutter.__project_slug }}/api/: __init__.py
{{ cookiecutter.__project_folder }}/{{ cookiecutter.__project_slug }}/api/default/: router.py  schemas.py
{{ cookiecutter.__project_folder }}/{{ cookiecutter.__project_slug }}/db/: data.py  models.py
{{ cookiecutter.project_folder }}/: .env.example  Dockerfile  docker-compose.yaml  pyproject.toml
{{ cookiecutter.project_folder }}/alembic/: env.py
{{ cookiecutter.project_folder }}/ansible/: clean.yaml  down.yaml  hosts.yaml  up.yaml
{{ cookiecutter.project_folder }}/config/: authz.yaml  config.toml
{{ cookiecutter.project_folder }}/export/: env.example  {{ cookiecutter.container_name }}.yaml
{{ cookiecutter.project_folder }}/scripts/: create_postgres_database.sh
(+6 files in other folders)
