[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_short_description }} }}"
authors = ["{{ cookiecutter.full_name }} <{{ cookiecutter.email }}>"]
packages = [{include = "{{ cookiecutter.__project_slug }}"}]

[tool.poetry.dependencies]
python = "^3.11"
dcwiz-app-utils = {git = "https://github.com/cap-dcwiz/dcwiz-app-utils.git", rev = "main"}

[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^23.1.0"}
ansible = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
{{ cookiecutter.__bin_name }} = "{{ cookiecutter.__project_slug }}.app:main"
