[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_short_description }} }}"
authors = ["{{ cookiecutter.full_name }} <{{ cookiecutter.email }}>"]
packages = [{include = "{{ cookiecutter.__project_slug }}"}]

[tool.poetry.dependencies]
python = "^3.11"
dcwiz-app-utils = {git = "https://github.com/cap-dcwiz/dcwiz-app-utils.git", rev = "main"}

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.7"
ansible = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
{{ cookiecutter.__bin_name }} = "{{ cookiecutter.__project_slug }}.app:main"

[tool.ruff]
# Same as Black.
line-length = 120

[tool.ruff.lint.isort]
order-by-type = true
relative-imports-order = "closest-to-furthest"
extra-standard-library = ["typing"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
known-first-party = []
